# AI-Forensicator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.py  db.py  main.py  normalizer.py  pyproject.toml  schema.py
analyzers/: __init__.py  export.py  stats.py  timeline.py
collectors/: __init__.py  aider.py  amazon_q.py  base.py  brave.py  browser.py  cagent.py  claude_code.py  claude_desktop.py  cline.py  codex.py  cody.py  comfyui.py  continue_dev.py  copilot.py  copilot_cli.py  cursor.py  diffusionbee.py  draw_things.py  edge.py  generic_logs.py  gpt4all.py  grammarly.py  jan.py  jetbrains_ai.py  lm_studio.py  mixins.py  ms_copilot.py  msty.py  notion.py  ollama.py  openai_atlas.py  openai_chatgpt.py  perplexity.py  pieces.py  poe.py  raycast.py  roo_code.py  supermaven.py  tabnine.py  (+2 more)
scripts/: generate_demo_gif.py
tests/: __init__.py  test_collectors.py  test_db.py  test_schema.py
ui/: __init__.py  terminal.py
