[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-forensicator"
version = "0.1.0"
description = "Discover, collect, and analyze forensic artifacts from AI tools on macOS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Anthony Candeias"},
]
keywords = ["forensics", "ai", "security", "macos", "artifact-collection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "rich>=13.0",
]

[tool.setuptools]
py-modules = ["main"]
packages = ["collectors", "analyzers", "ui"]

[project.scripts]
aift = "main:main"

[project.urls]
Homepage = "https://github.com/ACandeias/AI-Forensicator"
Repository = "https://github.com/ACandeias/AI-Forensicator"
Issues = "https://github.com/ACandeias/AI-Forensicator/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
